Fixed typed.js bug. section takes up full screen

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
                     <img class="avatar__img"
                         src="https://scontent-sea1-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/s960x960/10518576_10204818150518942_6893564124719775159_o.jpg">
                 </div>
-<!--                 <h1 class="top__title">Rahat Mahbub</h1>
- -->                 
                     <h1 class="top__title">
+                        &nbsp;
                         <span class="typed"></span>
                     </h1>
+                    <h2 id="tagline">
+                            Software Engineer by day, Hacker by night.
+                    </h2>
 <!--                     <p class="top__text"> Software Engineer by day, Hacker by Night</p>
  -->            </div>
         </section>
