--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div id="container"></div>
-
+        <div id="particles-js"></div>
         <section class="section section--top">
             <div class="section__content">
                 <div class="avatar">
@@ -40,8 +39,7 @@
                     <h2 id="tagline">
                             Software Engineer by day, Hacker by night.
                     </h2>
-<!--                     <p class="top__text"> Software Engineer by day, Hacker by Night</p>
- -->            </div>
+            </div>
         </section>
 
 
@@ -52,21 +50,27 @@
         <script src="js/main.js"></script>
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
+        <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+        <!-- stats.js lib -->
+        <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
+        <script src="js/particle.js"></script>
+
 <!--      
         <script type="text/javascript" src="http://threejs.org/build/three.min.js"></script>
         <script type="text/javascript" src="http://threejs.org/examples/js/renderers/Projector.js"></script>
         <script type="text/javascript" src="http://threejs.org/examples/js/renderers/CanvasRenderer.js"></script>
-        <script src="js/particle.js"></script> -->
-        
+-->        
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        // <script>
+        //     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        //     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        //     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        //     e.src='//www.google-analytics.com/analytics.js';
+        //     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        //     ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        // </script>
     </body>
 </html>
