--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/animate.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -26,12 +27,16 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="particles-js"></div>
+        
         <section class="section section--top">
+
+
             <div class="section__content">
                 <div class="avatar">
                     <img class="avatar__img"
                         src="https://scontent-sea1-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/s960x960/10518576_10204818150518942_6893564124719775159_o.jpg">
                 </div>
+
                     <h1 class="top__title">
                         &nbsp;
                         <span class="typed"></span>
@@ -39,6 +44,22 @@
                     <h2 id="tagline">
                             Software Engineer by day, Hacker by night.
                     </h2>
+
+                    <div class="social-buttons">
+                        <a href="#" class="social-button github">
+                            <i class="fa fa-github"></i>
+                        </a>
+                        <a href="#" class="social-button stack-overflow">
+                            <i class="fa fa-stack-overflow"></i>
+                        </a>
+                        <a href="#" class="social-button linkedin-square">
+                            <i class="fa fa-linkedin-square"></i>
+                        </a>
+                        <a href="#" class="social-button envelope-o">
+                            <i class="fa fa-envelope-o"></i>
+                        </a>
+                    </div>
+
             </div>
         </section>
 
