--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         <!--Fonts-->
         <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700' rel='stylesheet' type='text/css'>
 
+        <!--GOSquared-->
+        <script>
+          !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
+          arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+          d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
+          insertBefore(d,q)}(window,document,'script','_gs');
+
+          _gs('GSN-654789-F');
+        </script>
+
         <script src="//localhost:35729/livereload.js"></script>
     </head>
     <body>
@@ -46,16 +56,18 @@
                     </h2>
 
                     <div class="social-buttons">
-                        <a href="#" class="social-button github">
+                        <a href="http://github.com/rahatm1"
+                            class="social-button github">
                             <i class="fa fa-github"></i>
                         </a>
-                        <a href="#" class="social-button stack-overflow">
+                        <a href="http://stackoverflow.com/users/2603817/rahat-mahbub"
+                            class="social-button stack-overflow">
                             <i class="fa fa-stack-overflow"></i>
                         </a>
-                        <a href="#" class="social-button linkedin-square">
+                        <a href="https://ca.linkedin.com/in/rahatm1" class="social-button linkedin-square">
                             <i class="fa fa-linkedin-square"></i>
                         </a>
-                        <a href="#" class="social-button envelope-o">
+                        <a href="mailto:rahatm1@uvic.ca" class="social-button envelope-o">
                             <i class="fa fa-envelope-o"></i>
                         </a>
                     </div>
@@ -85,13 +97,6 @@
 -->        
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        // <script>
-        //     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        //     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        //     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        //     e.src='//www.google-analytics.com/analytics.js';
-        //     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        //     ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        // </script>
+
     </body>
 </html>
