--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         <link rel="stylesheet" href="css/main.css">
 
         <!--Fonts-->
-        <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:700' rel='stylesheet' type='text/css'>
+
+        <!-- <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'> -->
+
+        <!-- <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400italic' rel='stylesheet' type='text/css'> -->
+
+        <!-- <link href='http://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet' type='text/css'> -->
+
+        <link href='http://fonts.googleapis.com/css?family=Prociono' rel='stylesheet' type='text/css'>
 
         <!--GOSquared-->
         <script>
