Page 2 added and chose color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Rahat's Home on the Web</title>
         <meta name="description"
-            content="Rahat Mahbub's website and blog about code and software engineering">
+            content="Rahat Mahbub's website and blog about software engineering">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -18,12 +18,6 @@
         <link rel="stylesheet" href="css/main.css">
 
         <!--Fonts-->
-
-        <!-- <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'> -->
-
-        <!-- <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400italic' rel='stylesheet' type='text/css'> -->
-
-        <!-- <link href='http://fonts.googleapis.com/css?family=Raleway:600' rel='stylesheet' type='text/css'> -->
 
         <link href='http://fonts.googleapis.com/css?family=Prociono' rel='stylesheet' type='text/css'>
 
@@ -47,7 +41,6 @@
         
         <section class="section section--top">
 
-
             <div class="section__content">
                 <div class="avatar">
                     <img class="avatar__img"
@@ -58,6 +51,7 @@
                         &nbsp;
                         <span class="typed"></span>
                     </h1>
+
                     <h2 id="tagline">
                             Software Engineer by day, Hacker by night.
                     </h2>
@@ -82,6 +76,12 @@
             </div>
         </section>
 
+        <section class="section section--top style1">
+            <div class="section__content">
+                <h1 class="top__title">My skills</h1>
+            </div>
+        </section>
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
@@ -96,12 +96,6 @@
         <!-- stats.js lib -->
         <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
         <script src="js/particle.js"></script>
-
-<!--      
-        <script type="text/javascript" src="http://threejs.org/build/three.min.js"></script>
-        <script type="text/javascript" src="http://threejs.org/examples/js/renderers/Projector.js"></script>
-        <script type="text/javascript" src="http://threejs.org/examples/js/renderers/CanvasRenderer.js"></script>
--->        
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 
