Some progress on skills page

--- a/index.html
+++ b/index.html
@@ -76,9 +76,15 @@
             </div>
         </section>
 
-        <section class="section section--top style1">
-            <div class="section__content">
-                <h1 class="top__title">My skills</h1>
+        <section class="section__skill">
+            <h1 class="skill__title">My skills</h1>
+            <div class="grid">
+
+                <div id="circle" class="columnLeft"></div>
+
+                <div id="circle2" class="columnMid"></div>
+
+                <div id="circle3" class="columnRight"></div>
             </div>
         </section>
 
@@ -90,6 +96,7 @@
         <script src="js/main.js"></script>
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="js/vendor/circle-progress.js"></script>
 
         <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
         <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
