Page 2 is almost done

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <link rel="stylesheet" href="css/main.css">
 
         <!--Fonts-->
-
         <link href='http://fonts.googleapis.com/css?family=Prociono' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
 
         <!--GOSquared-->
         <script>
@@ -30,15 +30,14 @@
 
           _gs('GSN-654789-F');
         </script>
-
-        <script src="//localhost:35729/livereload.js"></script>
     </head>
+
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="particles-js"></div>
-        
+
         <section class="section section--top">
 
             <div class="section__content">
@@ -77,28 +76,49 @@
         </section>
 
         <section class="section__skill">
-            <h1 class="skill__title">My skills</h1>
+            <h1 class="skill__title">Technical Skills</h1>
+            <br>
             <div class="grid">
 
-                <div id="circle" class="columnLeft"></div>
+                <div class="columnLeft">
+                    <div class="progress" id="progress1"></div>
+                    <h2 class="skill__title">Javascript</h2>
+                    <div class="progress" id="progress2"></div>
+                    <h2 class="skill__title">Node.js</h2>
+                </div>
 
-                <div id="circle2" class="columnMid"></div>
+                <div class="columnMid">
+                    <div class="progress" id="progress3"></div>
+                    <h2 class="skill__title">Java</h2>
+                    <div class="progress" id="progress4"></div>
+                    <h2 class="skill__title">AngularJS</h2>
+                </div>
 
-                <div id="circle3" class="columnRight"></div>
+                <div class="columnRight">
+                    <div class="progress" id="progress5"></div>
+                    <h2 class="skill__title">Python</h2>
+                    <div class="progress" id="progress6"></div>
+                    <h2 class="skill__title">Android</h2>
+                </div>
+            </div>
+            <div id="skill__footer">
+                <p>
+                    Note: This is an arbitary representation of my competency
+                        on different technologies
+                </p>
             </div>
         </section>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-        <script src="js/vendor/circle-progress.js"></script>
+        <script src="js/vendor/progressbar.min.js"></script>
 
-        <!-- particles.js lib - https://github.com/VincentGarreau/particles.js --> 
+        <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
         <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <!-- stats.js lib -->
         <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
