page 2 is complete

--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
             <div class="grid">
 
                 <div class="columnLeft">
-                    <div class="progress" id="progress1">                    </div>
+                    <div class="progress" id="progress1"></div>
                     <h2 class="skill__title">Javascript</h2>
-                    <div class="progress" id="progress2">                    </div>
+                    <div class="progress" id="progress4"></div>
                     <h2 class="skill__title">Node.js</h2>
                 </div>
 
                 <div class="columnMid">
-                    <div class="progress" id="progress3">                    </div>
+                    <div class="progress" id="progress2"></div>
                     <h2 class="skill__title">Java</h2>
-                    <div class="progress" id="progress4">                    </div>
+                    <div class="progress" id="progress5"></div>
                     <h2 class="skill__title">AngularJS</h2>
                 </div>
 
                 <div class="columnRight">
-                    <div class="progress" id="progress5">                    </div>
+                    <div class="progress" id="progress3"></div>
                     <h2 class="skill__title">Python</h2>
-                    <div class="progress" id="progress6">                    </div>
+                    <div class="progress" id="progress6"></div>
                     <h2 class="skill__title">Android</h2>
                 </div>
             </div>
@@ -116,8 +116,8 @@
         <script src="js/main.js"></script>
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-        <script src="js/vendor/progressbar.min.js"></script>
         <script src="js/vendor/circle-progress.js"></script>
+        <script src="js/vendor/jquery.appear.js"></script>
 
         <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <script src="js/particle.js"></script>
