--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div id="skill__footer">
                 <p>
                     Note: This is an arbitary representation of my competency
-                        on different technologies
+                        on these technologies
                 </p>
             </div>
         </section>
