Updated skill footer. Cleaned bugs in TODO.txt

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             </div>
             <div id="skill__footer">
                 <p>
-                    Note: This is an arbitary representation of my competency
-                        on these technologies
+                    Note: The above figure is an arbitary representation of my competency
+                        on these technologies.
                 </p>
             </div>
         </section>
