--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             </div>
         </section>
 
+        <section class="section__content">
+            
+        </section>
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
