--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
@@ -116,15 +116,6 @@
         </section>
 
         <section class="section__project">
-            <!-- <div id="test">
-
-            </div>
-            <div id="test2">
-                <h1 class="title">Project 1</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div> -->
             <div class="project__title">
                 <h1 class="title">Projects</h1>
             </div>
@@ -133,24 +124,43 @@
                 data-theme="light">
                 <ul>
                     <li>
+                        <!-- <div class="project__image"> -->
+                        <img src="./img/mediapp2.png" width="300px" height="500px" />
+                        <!-- </div> -->
                         <div class="project__description">
                             <h2 class="title">Medi-App</h2>
                             <div>
                                 <ul>
                                     <li>A mobile web-app for medical appointment scheduling and prescription tracking.</li>
                                     <li>Built with Node.js, MongoDB, and JQuery Mobile</li>
-                                    <li><a class="project__anchor" href="http://medi-app.heroku.com">Click Here</a> for the demo </li>
+                                    <li><a class="project__anchor" href="http://medi-app.heroku.com">Click Here</a> for a demo </li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div class="flick-title">Title 2</div>
-                        <div class="flick-sub-text">Text line 2</div>
+                        <img src="./img/robot.jpg" width="480px" height="360px"/>
+                        <div class="project__description">
+                            <h2 class="title">IR-Radiation detection robot</h2>
+                            <div>
+                                <ul>
+                                    <li>A four-wheel robot that searches for an infrared emitting object, moves towards it and attempts to neutralize the object using its mechanical hand.</li>
+                                    <li>Built with Vex-kit and RobotC.</li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li>
-                        <div class="flick-title">Title 3</div>
-                        <div class="flick-sub-text">Text line 3</div>
+                        <img src="./img/ashajo1.png" width="500" height="350"/>
+                        <div class="project__description">
+                            <h2 class="title">Ashajo (Currently in-development)</h2>
+                            <div>
+                                <ul>
+                                    <li>A simple web-based accounting and inventory management software.</li>
+                                    <li>Built with Node.js and PostgreSQL, running on Heroku.</li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
