--- a/index.html
+++ b/index.html
@@ -10,29 +10,19 @@
         <meta name="description"
             content="Rahat Mahbub's website and blog about software engineering">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+        <!--Vendor-->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/animate.min.css">
-        <link rel="stylesheet" href="css/main.css">
-
-        <link rel="stylesheet" href="css/jquery.skippr.css">
         <link rel="stylesheet" href="css/flickerplate.css">
+
+        <link rel="stylesheet" href="css/main.css">
 
         <!--Fonts-->
         <link href='http://fonts.googleapis.com/css?family=Prociono' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
 
-        <!--GOSquared-->
-        <script>
-          !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
-          arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
-          d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
-          insertBefore(d,q)}(window,document,'script','_gs');
-
-          _gs('GSN-654789-F');
-        </script>
     </head>
 
     <body>
@@ -46,7 +36,7 @@
             <div class="section__content">
                 <div class="avatar">
                     <img class="avatar__img"
-                        src="https://scontent-sea1-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/s960x960/10518576_10204818150518942_6893564124719775159_o.jpg">
+                        src="./img/avatar.jpg">
                 </div>
 
                     <h1 class="top__title">
@@ -67,13 +57,16 @@
                             class="social-button stack-overflow">
                             <i class="fa fa-stack-overflow"></i>
                         </a>
-                        <a href="https://ca.linkedin.com/in/rahatm1" class="social-button linkedin-square">
+                        <a href="https://ca.linkedin.com/in/rahatm1"
+                            class="social-button linkedin-square">
                             <i class="fa fa-linkedin-square"></i>
                         </a>
-                        <a href="mailto:rahatm1@uvic.ca" class="social-button envelope-o">
+                        <a href="mailto:rahatm1@uvic.ca"
+                            class="social-button envelope-o">
                             <i class="fa fa-envelope-o"></i>
                         </a>
-                        <a href="./RahatMahbub.pdf" class="social-button file-pdf-o">
+                        <a href="./RahatMahbub.pdf"
+                            class="social-button file-pdf-o">
                             <i class="fa fa-file-pdf-o"></i>
                         </a>
                     </div>
@@ -82,8 +75,10 @@
         </section>
 
         <section class="section__skill">
+
             <h1 class="title">Technical Skills</h1>
             <br>
+
             <div class="grid">
 
                 <div class="columnLeft">
@@ -106,51 +101,62 @@
                     <div class="progress" id="progress6"></div>
                     <h2 class="title">Android</h2>
                 </div>
+
             </div>
+
             <div id="skill__footer">
                 <p>
                     Note: The above figure is an arbitary representation of my competency
                         on these technologies.
                 </p>
             </div>
+
         </section>
 
         <section class="section__project">
+
             <div class="project__title">
                 <h1 class="title">Projects</h1>
             </div>
-            <div id="project__gallery"
-                data-block-text="false"
-                data-theme="light">
+
+            <div id="project__gallery" data-block-text="false" data-theme="light">
                 <ul>
                     <li>
+
                         <!-- <div class="project__image"> -->
                         <img src="./img/mediapp2.png" width="300px" height="500px" />
-                        <!-- </div> -->
                         <div class="project__description">
                             <h2 class="title">Medi-App</h2>
                             <div>
                                 <ul>
-                                    <li>A mobile web-app for medical appointment scheduling and prescription tracking.</li>
+                                    <li>A mobile web-app for medical appointment
+                                            scheduling and prescription tracking.</li>
                                     <li>Built with Node.js, MongoDB, and JQuery Mobile</li>
-                                    <li><a class="project__anchor" href="http://medi-app.heroku.com">Click Here</a> for a demo </li>
+                                    <li><a class="project__anchor" href="http://medi-app.heroku.com">
+                                        Click Here</a> for a demo
+                                    </li>
                                 </ul>
                             </div>
                         </div>
+
                     </li>
                     <li>
+
                         <img src="./img/robot.jpg" width="480px" height="360px"/>
                         <div class="project__description">
                             <h2 class="title">IR-Radiation detection robot</h2>
                             <div>
                                 <ul>
-                                    <li>A four-wheel robot that searches for an infrared emitting object, moves towards it and attempts to neutralize the object using its mechanical hand.</li>
+                                    <li>A four-wheel robot that searches for an infrared emitting object,
+                                        moves towards it and attempts to neutralize the object using its mechanical hand.</li>
                                     <li>Built with Vex-kit and RobotC.</li>
                                 </ul>
                             </div>
                         </div>
+
                     </li>
                     <li>
+
                         <img src="./img/ashajo1.png" width="500" height="350"/>
                         <div class="project__description">
                             <h2 class="title">Ashajo (Currently in-development)</h2>
@@ -162,8 +168,10 @@
                             </div>
                         </div>
                     </li>
+
                 </ul>
             </div>
+
         </section>
 
         <section class="footer">
@@ -175,19 +183,27 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
         <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
 
+        <!--Vendor-->
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src="js/vendor/circle-progress.js"></script>
         <script src="js/vendor/jquery.appear.js"></script>
-
-        <script src="js/vendor/jquery.skippr.min.js"></script>
-
         <script src="js/vendor/hammer-v2.0.3.min.js"></script>
         <script src="js/vendor/flickerplate.min.js"></script>
+        <script src="js/vendor/particles.min.js"></script>
 
-        <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+        <script src="js/main.js"></script>
         <script src="js/particle.js"></script>
+
+        <!--GOSquared-->
+        <script>
+          !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
+          arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+          d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
+          insertBefore(d,q)}(window,document,'script','_gs');
+
+          _gs('GSN-654789-F');
+        </script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 
