CSS naming fixed

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <![endif]-->
         <div id="particles-js"></div>
 
-        <section class="section section--top">
+        <section class="section section-top">
 
-            <div class="section__content">
+            <div class="section-content">
                 <div class="avatar">
-                    <img class="avatar__img"
+                    <img class="avatar-img"
                         src="./img/avatar.jpg">
                 </div>
 
-                    <h1 class="top__title">
+                    <h1 class="top-title">
                         &nbsp;
                         <span class="typed"></span>
                     </h1>
@@ -81,12 +81,12 @@
             </div>
         </section>
 
-        <section class="section__skill">
+        <section class="section-skill">
 
             <h1 class="title">Technical Skills</h1>
             <br>
 
-            <div class="grid">
+            <div>
 
                 <div class="columnLeft">
                     <div class="progress" id="progress1"></div>
@@ -111,7 +111,7 @@
 
             </div>
 
-            <div id="skill__footer">
+            <div id="skill-footer">
                 <p>
                     Note: The above figure is an arbitary representation of my competency
                         on these technologies.
@@ -120,26 +120,26 @@
 
         </section>
 
-        <section class="section__project">
+        <section>
 
-            <div class="project__title">
+            <div class="project-title">
                 <h1 class="title">Projects</h1>
             </div>
 
-            <div id="project__gallery" data-block-text="false" data-theme="light">
+            <div id="project-gallery" data-block-text="false" data-theme="light">
                 <ul>
                     <li>
 
                         <!-- <div class="project__image"> -->
                         <img src="./img/mediapp2.png" width="300px" height="500px" />
-                        <div class="project__description">
+                        <div class="project-description">
                             <h2 class="title">Medi-App</h2>
                             <div>
                                 <ul>
                                     <li>A mobile web-app for medical appointment
                                             scheduling and prescription tracking.</li>
                                     <li>Built with Node.js, MongoDB, and JQuery Mobile</li>
-                                    <li><a class="project__anchor" href="http://medi-app.heroku.com">
+                                    <li><a class="project-anchor" href="http://medi-app.heroku.com">
                                         Click Here</a> for a demo
                                     </li>
                                 </ul>
@@ -150,7 +150,7 @@
                     <li>
 
                         <img src="./img/robot.jpg" width="480px" height="360px"/>
-                        <div class="project__description">
+                        <div class="project-description">
                             <h2 class="title">IR-Radiation detection robot</h2>
                             <div>
                                 <ul>
@@ -165,7 +165,7 @@
                     <li>
 
                         <img src="./img/ashajo1.png" width="500" height="350"/>
-                        <div class="project__description">
+                        <div class="project-description">
                             <h2 class="title">Ashajo (Currently in-development)</h2>
                             <div>
                                 <ul>
