optimized for mobile

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         </section>
 
-        <section>
+        <section class="section-projects">
 
             <div class="project-title">
                 <h1 class="title">Projects</h1>
